youme integ for ocr free llm

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 gradio==5.20.1
-openai 
+openai==1.52.0
+httpx==0.27.2 # openai dependency 
 streamlit
 streamlit-chat
 matplotlib
 scipy
 plotly
 scikit-learn 
+
+##
+pypdf2==3.0.1
+pdf2image==1.17.0 # 윈도우는 poppler를 수동으로 깔아야함 https://stackoverflow.com/questions/53481088/poppler-in-path-for-pdf2image
+tiktoken==0.8.0
+pandas==2.2.3
+openpyxl==3.1.5
+poppler 
